# simple-etl

./: README.md  Untitled Diagram.drawio  main.py  pyproject.toml  requirements.txt
config/: config.py  logging.conf
data/database/: shop.db
data/file/: users.csv
docs/: flowchart.drawio
src/: extract.py  load.py  transform.py
src/sql/: create_table.sql  insert_into.sql
tests/: test_extract.py
