[project]
name = "simple-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I",]

[tool.ruff]
line-length = 79

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D100", "D103", "D104", "D205"]
